--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ts-lab-1",
   "version": "1.0.0",
-  "description": "",
+  "description": "This project is set up and ready to go. Just run the following to download the dependencies.",
   "main": "src/index.ts",
   "scripts": {
     "build": "tsc",
@@ -13,11 +13,335 @@
   "author": "Grand Circus Detroit",
   "license": "ISC",
   "devDependencies": {
-    "@types/jest": "^26.0.23",
-    "jest": "^27.0.4",
+    "@types/jest": "^26.0.24",
+    "jest": "^27.4.7",
     "nodemon": "^2.0.7",
-    "ts-jest": "^27.0.3",
+    "ts-jest": "^27.1.2",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.2"
-  }
+  },
+  "directories": {
+    "test": "tests"
+  },
+  "dependencies": {
+    "abab": "^2.0.5",
+    "abbrev": "^1.1.1",
+    "acorn": "^8.4.0",
+    "acorn-globals": "^6.0.0",
+    "acorn-walk": "^7.2.0",
+    "agent-base": "^6.0.2",
+    "ansi-align": "^3.0.0",
+    "ansi-escapes": "^4.3.2",
+    "ansi-regex": "^5.0.0",
+    "ansi-styles": "^4.3.0",
+    "anymatch": "^3.1.2",
+    "arg": "^4.1.3",
+    "argparse": "^1.0.10",
+    "asynckit": "^0.4.0",
+    "babel-jest": "^27.0.2",
+    "babel-plugin-istanbul": "^6.0.0",
+    "babel-plugin-jest-hoist": "^27.0.1",
+    "babel-preset-current-node-syntax": "^1.0.1",
+    "babel-preset-jest": "^27.0.1",
+    "balanced-match": "^1.0.2",
+    "binary-extensions": "^2.2.0",
+    "boxen": "^4.2.0",
+    "brace-expansion": "^1.1.11",
+    "braces": "^3.0.2",
+    "browser-process-hrtime": "^1.0.0",
+    "browserslist": "^4.16.6",
+    "bs-logger": "^0.2.6",
+    "bser": "^2.1.1",
+    "buffer-from": "^1.1.1",
+    "cacheable-request": "^6.1.0",
+    "callsites": "^3.1.0",
+    "camelcase": "^5.3.1",
+    "caniuse-lite": "^1.0.30001237",
+    "chalk": "^3.0.0",
+    "char-regex": "^1.0.2",
+    "chokidar": "^3.5.2",
+    "ci-info": "^2.0.0",
+    "cjs-module-lexer": "^1.2.1",
+    "cli-boxes": "^2.2.1",
+    "cliui": "^7.0.4",
+    "clone-response": "^1.0.2",
+    "co": "^4.6.0",
+    "collect-v8-coverage": "^1.0.1",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "colorette": "^1.2.2",
+    "combined-stream": "^1.0.8",
+    "concat-map": "^0.0.1",
+    "configstore": "^5.0.1",
+    "convert-source-map": "^1.7.0",
+    "create-require": "^1.1.1",
+    "cross-spawn": "^7.0.3",
+    "crypto-random-string": "^2.0.0",
+    "cssom": "^0.4.4",
+    "cssstyle": "^2.3.0",
+    "data-urls": "^2.0.0",
+    "debug": "^3.2.7",
+    "decimal.js": "^10.2.1",
+    "decompress-response": "^3.3.0",
+    "dedent": "^0.7.0",
+    "deep-extend": "^0.6.0",
+    "deep-is": "^0.1.3",
+    "deepmerge": "^4.2.2",
+    "defer-to-connect": "^1.1.3",
+    "delayed-stream": "^1.0.0",
+    "detect-newline": "^3.1.0",
+    "diff": "^4.0.2",
+    "diff-sequences": "^26.6.2",
+    "domexception": "^2.0.1",
+    "dot-prop": "^5.3.0",
+    "duplexer3": "^0.1.4",
+    "electron-to-chromium": "^1.3.752",
+    "emittery": "^0.8.1",
+    "emoji-regex": "^8.0.0",
+    "end-of-stream": "^1.4.4",
+    "escalade": "^3.1.1",
+    "escape-goat": "^2.1.1",
+    "escape-string-regexp": "^2.0.0",
+    "escodegen": "^2.0.0",
+    "esprima": "^4.0.1",
+    "estraverse": "^5.2.0",
+    "esutils": "^2.0.3",
+    "execa": "^5.1.1",
+    "exit": "^0.1.2",
+    "expect": "^27.0.2",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fast-levenshtein": "^2.0.6",
+    "fb-watchman": "^2.0.1",
+    "fill-range": "^7.0.1",
+    "find-up": "^4.1.0",
+    "form-data": "^3.0.1",
+    "fs.realpath": "^1.0.0",
+    "function-bind": "^1.1.1",
+    "gensync": "^1.0.0-beta.2",
+    "get-caller-file": "^2.0.5",
+    "get-package-type": "^0.1.0",
+    "get-stream": "^4.1.0",
+    "glob": "^7.1.7",
+    "glob-parent": "^5.1.2",
+    "global-dirs": "^2.1.0",
+    "globals": "^11.12.0",
+    "got": "^9.6.0",
+    "graceful-fs": "^4.2.6",
+    "has": "^1.0.3",
+    "has-flag": "^3.0.0",
+    "has-yarn": "^2.1.0",
+    "html-encoding-sniffer": "^2.0.1",
+    "html-escaper": "^2.0.2",
+    "http-cache-semantics": "^4.1.0",
+    "http-proxy-agent": "^4.0.1",
+    "https-proxy-agent": "^5.0.0",
+    "human-signals": "^2.1.0",
+    "iconv-lite": "^0.4.24",
+    "ignore-by-default": "^1.0.1",
+    "import-lazy": "^2.1.0",
+    "import-local": "^3.0.2",
+    "imurmurhash": "^0.1.4",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "ini": "^1.3.7",
+    "is-binary-path": "^2.1.0",
+    "is-ci": "^2.0.0",
+    "is-core-module": "^2.4.0",
+    "is-extglob": "^2.1.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-generator-fn": "^2.1.0",
+    "is-glob": "^4.0.1",
+    "is-installed-globally": "^0.3.2",
+    "is-npm": "^4.0.0",
+    "is-number": "^7.0.0",
+    "is-obj": "^2.0.0",
+    "is-path-inside": "^3.0.3",
+    "is-potential-custom-element-name": "^1.0.1",
+    "is-stream": "^2.0.0",
+    "is-typedarray": "^1.0.0",
+    "is-yarn-global": "^0.3.0",
+    "isexe": "^2.0.0",
+    "istanbul-lib-coverage": "^3.0.0",
+    "istanbul-lib-instrument": "^4.0.3",
+    "istanbul-lib-report": "^3.0.0",
+    "istanbul-lib-source-maps": "^4.0.0",
+    "istanbul-reports": "^3.0.2",
+    "jest-changed-files": "^27.0.2",
+    "jest-circus": "^27.0.4",
+    "jest-cli": "^27.0.4",
+    "jest-config": "^27.0.4",
+    "jest-diff": "^26.6.2",
+    "jest-docblock": "^27.0.1",
+    "jest-each": "^27.0.2",
+    "jest-environment-jsdom": "^27.0.3",
+    "jest-environment-node": "^27.0.3",
+    "jest-get-type": "^27.0.1",
+    "jest-haste-map": "^27.0.2",
+    "jest-jasmine2": "^27.0.4",
+    "jest-leak-detector": "^27.0.2",
+    "jest-matcher-utils": "^27.0.2",
+    "jest-message-util": "^27.0.2",
+    "jest-mock": "^27.0.3",
+    "jest-pnp-resolver": "^1.2.2",
+    "jest-regex-util": "^27.0.1",
+    "jest-resolve": "^27.0.4",
+    "jest-resolve-dependencies": "^27.0.4",
+    "jest-runner": "^27.0.4",
+    "jest-runtime": "^27.0.4",
+    "jest-serializer": "^27.0.1",
+    "jest-snapshot": "^27.0.4",
+    "jest-util": "^27.0.2",
+    "jest-validate": "^27.0.2",
+    "jest-watcher": "^27.0.2",
+    "jest-worker": "^27.0.2",
+    "js-tokens": "^4.0.0",
+    "js-yaml": "^3.14.1",
+    "jsdom": "^16.6.0",
+    "jsesc": "^2.5.2",
+    "json-buffer": "^3.0.0",
+    "json5": "^2.2.0",
+    "keyv": "^3.1.0",
+    "kleur": "^3.0.3",
+    "latest-version": "^5.1.0",
+    "leven": "^3.1.0",
+    "levn": "^0.3.0",
+    "locate-path": "^5.0.0",
+    "lodash": "^4.17.21",
+    "lowercase-keys": "^1.0.1",
+    "lru-cache": "^6.0.0",
+    "make-dir": "^3.1.0",
+    "make-error": "^1.3.6",
+    "makeerror": "^1.0.11",
+    "merge-stream": "^2.0.0",
+    "micromatch": "^4.0.4",
+    "mime-db": "^1.48.0",
+    "mime-types": "^2.1.31",
+    "mimic-fn": "^2.1.0",
+    "mimic-response": "^1.0.1",
+    "minimatch": "^3.0.4",
+    "minimist": "^1.2.5",
+    "mkdirp": "^1.0.4",
+    "ms": "^2.1.3",
+    "natural-compare": "^1.4.0",
+    "node-int64": "^0.4.0",
+    "node-modules-regexp": "^1.0.0",
+    "node-releases": "^1.1.73",
+    "nopt": "^1.0.10",
+    "normalize-path": "^3.0.0",
+    "normalize-url": "^4.5.1",
+    "npm-run-path": "^4.0.1",
+    "nwsapi": "^2.2.0",
+    "once": "^1.4.0",
+    "onetime": "^5.1.2",
+    "optionator": "^0.8.3",
+    "p-cancelable": "^1.1.0",
+    "p-each-series": "^2.2.0",
+    "p-limit": "^2.3.0",
+    "p-locate": "^4.1.0",
+    "p-try": "^2.2.0",
+    "package-json": "^6.5.0",
+    "parse5": "^6.0.1",
+    "path-exists": "^4.0.0",
+    "path-is-absolute": "^1.0.1",
+    "path-key": "^3.1.1",
+    "path-parse": "^1.0.7",
+    "picomatch": "^2.3.0",
+    "pirates": "^4.0.1",
+    "pkg-dir": "^4.2.0",
+    "prelude-ls": "^1.1.2",
+    "prepend-http": "^2.0.0",
+    "pretty-format": "^26.6.2",
+    "prompts": "^2.4.1",
+    "psl": "^1.8.0",
+    "pstree.remy": "^1.1.8",
+    "pump": "^3.0.0",
+    "punycode": "^2.1.1",
+    "pupa": "^2.1.1",
+    "rc": "^1.2.8",
+    "react-is": "^17.0.2",
+    "readdirp": "^3.6.0",
+    "registry-auth-token": "^4.2.1",
+    "registry-url": "^5.1.0",
+    "require-directory": "^2.1.1",
+    "resolve": "^1.20.0",
+    "resolve-cwd": "^3.0.0",
+    "resolve-from": "^5.0.0",
+    "responselike": "^1.0.2",
+    "rimraf": "^3.0.2",
+    "safe-buffer": "^5.1.2",
+    "safer-buffer": "^2.1.2",
+    "saxes": "^5.0.1",
+    "semver": "^5.7.1",
+    "semver-diff": "^3.1.1",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "signal-exit": "^3.0.3",
+    "sisteransi": "^1.0.5",
+    "slash": "^3.0.0",
+    "source-map": "^0.6.1",
+    "source-map-support": "^0.5.19",
+    "sprintf-js": "^1.0.3",
+    "stack-utils": "^2.0.3",
+    "string-length": "^4.0.2",
+    "string-width": "^4.2.2",
+    "strip-ansi": "^6.0.0",
+    "strip-bom": "^4.0.0",
+    "strip-final-newline": "^2.0.0",
+    "strip-json-comments": "^2.0.1",
+    "supports-color": "^5.5.0",
+    "supports-hyperlinks": "^2.2.0",
+    "symbol-tree": "^3.2.4",
+    "term-size": "^2.2.1",
+    "terminal-link": "^2.1.1",
+    "test-exclude": "^6.0.0",
+    "throat": "^6.0.1",
+    "tmpl": "^1.0.4",
+    "to-fast-properties": "^2.0.0",
+    "to-readable-stream": "^1.0.0",
+    "to-regex-range": "^5.0.1",
+    "touch": "^3.1.0",
+    "tough-cookie": "^4.0.0",
+    "tr46": "^2.1.0",
+    "type-check": "^0.3.2",
+    "type-detect": "^4.0.8",
+    "type-fest": "^0.8.1",
+    "typedarray-to-buffer": "^3.1.5",
+    "undefsafe": "^2.0.3",
+    "unique-string": "^2.0.0",
+    "universalify": "^0.1.2",
+    "update-notifier": "^4.1.3",
+    "url-parse-lax": "^3.0.0",
+    "v8-to-istanbul": "^7.1.2",
+    "w3c-hr-time": "^1.0.2",
+    "w3c-xmlserializer": "^2.0.0",
+    "walker": "^1.0.7",
+    "webidl-conversions": "^6.1.0",
+    "whatwg-encoding": "^1.0.5",
+    "whatwg-mimetype": "^2.3.0",
+    "whatwg-url": "^8.6.0",
+    "which": "^2.0.2",
+    "widest-line": "^3.1.0",
+    "word-wrap": "^1.2.3",
+    "wrap-ansi": "^7.0.0",
+    "wrappy": "^1.0.2",
+    "write-file-atomic": "^3.0.3",
+    "ws": "^7.5.0",
+    "xdg-basedir": "^4.0.0",
+    "xml-name-validator": "^3.0.0",
+    "xmlchars": "^2.2.0",
+    "y18n": "^5.0.8",
+    "yallist": "^4.0.0",
+    "yargs": "^16.2.0",
+    "yargs-parser": "^20.2.7",
+    "yn": "^3.1.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gc-submissions/typescript-lab-1-dJilla.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/gc-submissions/typescript-lab-1-dJilla/issues"
+  },
+  "homepage": "https://github.com/gc-submissions/typescript-lab-1-dJilla#readme"
 }
